--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
 	<title>Квіти</title>
 </head>
 <body>
-<table border="2">
+ <table border="2">
 	<tr>
-		<td colspan="2" class="1">Меню</td>
-	</tr>
-	<tr>
-		<table border="1">
-			<ul>  <li><a href="index.html">Перша сторінка</a></li>
-			      <li><a href="02.html">Друга сторінка</a></li>
-			      <li><a href="03.html">Третя сторінка</a></li></ul>
-		</table>
-	</tr>
-</table>
+	   <th>Меню</th>
+    </tr>
+    <tr>
+    	<td colspan="2">
+    	<ul>  <li><a href="index.html">Перша сторінка</a></li>
+    	      <li><a href="02.html">Друга сторінка</a></li>
+    	      <li><a href="03.html">Третя сторінка</a></li></ul>
+        </td></tr></table>
 <h1>Перша сторінка</h1>
 <h2>Вступ</h2>
 <p class="d">Квітка — складна система органів, що забезпечує насінневе розмноження покритонасінних (квіткових) рослин. У двостатевій квітці проходять мікро- і мегаспорогенез, мікро- і мегагаметогенез, запилення, запліднення, розвиток зародка, утворення плоду з насінням. Поява квітки в процесі еволюції — ароморфоз, який забезпечив широке розселення покритонасінних на Землі.</p>
