--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	   <th>Меню</th>
     </tr>
     <tr>
-    	<td colspan="2">
+    	<td colspan="2" class="menu">
     	<ul>  <li><a href="index.html">Перша сторінка</a></li>
     	      <li><a href="02.html">Друга сторінка</a></li>
     	      <li><a href="03.html">Третя сторінка</a></li></ul>
