--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <link rel="stylesheet" href="style.css">
- <table border="2" height="100">
+ <table border="2" style="width:100%">
 	<tr>
 	   <th>Меню</th>
     </tr>
