--- a/03.html
+++ b/03.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Квіти</title>
+</head>
+<body>
+<link rel="stylesheet" href="style.css">
+ <table border="2" style="width:100%">
+	<tr>
+	   <th>Меню</th>
+    </tr>
+     <tr>
+    	<td colspan="2" class="menu">
+    	<ul>  <li><a href="index.html">Перша сторінка</a></li>
+    	      <li><a href="02.html">Друга сторінка</a></li>
+    	      <li><a href="03.html">Третя сторінка</a></li></ul>
+        </td></tr></table>
+<h1>Третя сторінка</h1>
+<h2>Символізм квітів</h2>
+<p>Багато квітів мають важливе символічне значення у культурі різних народів. Присвоєння значень для квітів відоме як «мова квітів». Деякі з найпоширеніших прикладів:
+<ul><li>Червоні троянди — символ любові, краси та пристрасті</li>
+<li>Маки є символом спокою у момент смерті. У Великій Британії, Новій Зеландії, Австралії і Канаді, а також останнім часом в Україні символічні зображення червоного маку носять на пам'ять про солдатів, загиблих під час війни.</li>
+<li>Півники та лілії використовується в похованнях як символ з посиланням на «воскресіння/життя»</li>
+<li>Ромашки є символом невинності.</li></ul>
+У мистецтві багатьох культур в усьому світі існує виражена тенденція пов'язувати жіночність із квітами. Завдяки своїй різноманітній і колоритній зовнішності квіти давно стали улюбленим предметом для зображення художниками. Деякі з найвідоміших картин знаменитих художників відображають квіти, такі як «Соняшники» Ван Гога, серія з лататтям Клода Моне. Квіти також засушують методом сублімаційного сушіння і створюють тривимірні витвори мистецтва. У міфології квіти пов'язані з богами, наприклад римська богиня квітів, садів та весни Флора та грецька богиня весни, квітів і природи Хлорида. В індуїстській міфології, квіти мають значний статус. Вішну, одного з трьох головних богів в індуїстській системі, часто зображують, як він стоїть на квітці лотоса. Крім зв'язку з Вішну, індуїстська традиція також вважає, що лотос має духовне значення. Наприклад, він фігурує в індуїстських міфах про створення світу.
+</p>
