--- a/02.html
+++ b/02.html
@@ -5,6 +5,7 @@
 	<title>Квіти</title>
 </head>
 <body>
+	<body bgcolor="#ffccff">
 <link rel="stylesheet" href="style.css">
  <table border="2" style="width:100%">
 	<tr>
