--- a/02.html
+++ b/02.html
@@ -17,7 +17,7 @@
     	      <li><a href="02.html">Друга сторінка</a></li>
     	      <li><a href="03.html">Третя сторінка</a></li></ul>
         </td></tr></table>
-<h1>Друга сторінка</h1>
+<h1  class="play-regular">Друга сторінка</h1>
 <h2>Види квітів</h2>
 <p>З огляду на різну будову та екологію, квіти можна поділяти за різними критеріями. До критеріїв, які використовуються найчастіше можна віднести колір оцвітини, наявність або відсутність запаху, стійкість квітки. У науці в основному використовуються наступні критерії:
 <h3>Поділ з огляду на стать</h3>
