--- a/03.html
+++ b/03.html
@@ -5,7 +5,7 @@
 	<title>Квіти</title>
 </head>
 <body>
-	<body bgcolor="#ffccff">
+	<body bgcolor="#ffffe6">
 <link rel="stylesheet" href="style.css">
  <table border="2" style="width:100%">
 	<tr>
