--- a/02.html
+++ b/02.html
@@ -13,7 +13,7 @@
     </tr>
      <tr>
     	<td colspan="2" class="menu">
-    	<ul>  <li><a href="01.html">Перша сторінка</a></li>
+    	<ul>  <li><a href="index.html">Перша сторінка</a></li>
     	      <li><a href="02.html">Друга сторінка</a></li>
     	      <li><a href="03.html">Третя сторінка</a></li></ul>
         </td></tr></table>
