--- a/02.html
+++ b/02.html
@@ -18,8 +18,8 @@
     	      <li><a href="03.html">Третя сторінка</a></li></ul>
         </td></tr></table>
 <h1  class="great-vibes-regular">Друга сторінка</h1>
-<h2>Види квітів</h2>
-<p>З огляду на різну будову та екологію, квіти можна поділяти за різними критеріями. До критеріїв, які використовуються найчастіше можна віднести колір оцвітини, наявність або відсутність запаху, стійкість квітки. У науці в основному використовуються наступні критерії:
+<h2 class="zagl">Види квітів</h2>
+<p class="text">З огляду на різну будову та екологію, квіти можна поділяти за різними критеріями. До критеріїв, які використовуються найчастіше можна віднести колір оцвітини, наявність або відсутність запаху, стійкість квітки. У науці в основному використовуються наступні критерії:
 <h3>Поділ з огляду на стать</h3>
 <ul><li>Одностатеві</li>
 <li>Двостатеві</li>
