--- a/03.html
+++ b/03.html
@@ -20,7 +20,7 @@
 <h1 class="great-vibes-regular">Третя сторінка</h1>
 <h2 class="zagl">Символізм квітів</h2>
 <p class="text">Багато квітів мають важливе символічне значення у культурі різних народів. Присвоєння значень для квітів відоме як «мова квітів». Деякі з найпоширеніших прикладів:
-<ul><li>Червоні троянди — символ любові, краси та пристрасті</li>
+<ul class="perek"><li>Червоні троянди — символ любові, краси та пристрасті</li>
 <li>Маки є символом спокою у момент смерті. У Великій Британії, Новій Зеландії, Австралії і Канаді, а також останнім часом в Україні символічні зображення червоного маку носять на пам'ять про солдатів, загиблих під час війни.</li>
 <li>Півники та лілії використовується в похованнях як символ з посиланням на «воскресіння/життя»</li>
 <li>Ромашки є символом невинності.</li></ul>
