--- a/02.html
+++ b/02.html
@@ -20,26 +20,26 @@
 <h1  class="great-vibes-regular">Друга сторінка</h1>
 <h2 class="zagl">Види квітів</h2>
 <p class="text">З огляду на різну будову та екологію, квіти можна поділяти за різними критеріями. До критеріїв, які використовуються найчастіше можна віднести колір оцвітини, наявність або відсутність запаху, стійкість квітки. У науці в основному використовуються наступні критерії:
-<h3 class="perer">Поділ з огляду на стать;</h3>
+<h3>Поділ з огляду на стать;</h3>
 <ul class="perek"><li>Одностатеві;</li>
 <li>Двостатеві;</li>
 <li>Однодомні;</li>
 <li>Дводомні;</li></ul>
-<h3 class="perer>Поділ за характером запилення;</h3>
+<h3>Поділ за характером запилення;</h3>
 <ul class="perek"><li>Перехреснозапильні;</li>
 <li>Самозапильні;</li></ul>
-<h3 class="perer>Поділ за наявністю нектарників;</h3>
+<h3>Поділ за наявністю нектарників;</h3>
 <ul class="perek"><li>Квіти з легкодоступними нектарниками;</li>
 <li>Квіти з частково прихованими нектарниками;</li>
 <li>Квіти із повністю схованими нектарниками;</li>
 <li>Квіти без нектарників (т. зв. квіти пилкові);</li></ul>
-<h3 class="perer>Поділ за формою оцвітини;</h3>
+<h3>Поділ за формою оцвітини;</h3>
 <ul class="perek"><li>Лійкоподібні квіти;</li>
 <li>Дзвоникоподібні квіти;</li>
 <li>Трубчасті квіти;</li>
 <li>Метеликоподібні квіти (у бобових);</li>
 <li>Квіти-пастки;</li></ul>
-<h3 class="perer>Поділ за будовою оцвітини;</h3>
+<h3>Поділ за будовою оцвітини;</h3>
 <ul class="perek"><li>Диплохламідні — квітки з подвійною оцвітиною. Поділяються на:
 <ul><li>Гомохламідні;</li>
 <li>Гетерохламідні;</li></ul>
