--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <h2 class="zagl">Будова квітки</h2>
 <p class="text">Квітка складається із стеблової частини (квітконіжка і квітколоже), листкової частини (чашолистки, пелюстки) та генеративної частини (тичинки, маточка або маточки). Квітка є апікальним (верхівковим) органом, але при цьому вона може розташовуватися як на верхівці головного пагона, так і бічного. Вона прикріплюється до стебла за допомогою квітконіжки. Якщо квітконіжка сильно вкорочена або відсутня, квітка називається сидячою (подорожник, вербена, конюшина). На квітконіжці розташовуються також два (у дводольних) і один (в однодольних) маленьких передлистки — приквітки, які часто можуть бути відсутні. Верхня розширена частина квітконіжки, на якій розташовуються всі органи квітки, називається квітколожем. Квітколоже може мати різні розміри і форму — плоску (півонія), опуклу (суниця, малина), увігнуту (мигдаль), подовжену (магнолія). У деяких рослин в результаті зрощення квітколожа, нижніх частин покрову та андроцею утворюється особлива структура — гіпантій. Форма гіпантію може бути різноманітною і іноді брати участь в утворенні плоду (цінарродій — плід шипшини, яблуко). Гіпантій характерний для представників родин розових, аґрусових, ломикаменевих, бобових. Частини квітки ділять на фертильні, або репродуктивні (тичинки, маточка або маточки), і стерильні (оцвітина).
 </p>
+<img src="https://api.buki.com.ua/news_image/i7/gX/i7gXeUmqH4DolYrsG2bUrorJhMBGoAgAgV411Jmy.jpg">
 </body>
 </html>
 
