--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     	      <li><a href="02.html">Друга сторінка</a></li>
     	      <li><a href="03.html">Третя сторінка</a></li></ul>
         </td></tr></table>
-<h1 class="pangolin-regular">Перша сторінка</h1>
+<h1 class="comfortaa-<uniquifier>">Перша сторінка</h1>
 <h2 class="zagl">Вступ</h2>
 <p class="text">Квітка — складна система органів, що забезпечує насінневе розмноження покритонасінних (квіткових) рослин. У двостатевій квітці проходять мікро- і мегаспорогенез, мікро- і мегагаметогенез, запилення, запліднення, розвиток зародка, утворення плоду з насінням. Поява квітки в процесі еволюції — ароморфоз, який забезпечив широке розселення покритонасінних на Землі.</p>
 <h2 class="zagl">Будова квітки</h2>
