--- a/03.html
+++ b/03.html
@@ -17,7 +17,7 @@
     	      <li><a href="02.html">Друга сторінка</a></li>
     	      <li><a href="03.html">Третя сторінка</a></li></ul>
         </td></tr></table>
-<h1 class="comfortaa-<uniquifier>">Третя сторінка</h1>
+<h1 class="comfortaa">Третя сторінка</h1>
 <h2 class="zagl">Символізм квітів</h2>
 <p class="text">Багато квітів мають важливе символічне значення у культурі різних народів. Присвоєння значень для квітів відоме як «мова квітів». Деякі з найпоширеніших прикладів:</p>
 <ul class="perek"><li>Червоні троянди — символ любові, краси та пристрасті</li>
