--- a/03.html
+++ b/03.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>Квіти</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Advent+Pro:ital,wght@0,100..900;1,100..900&family=Comfortaa:wght@300..700&family=Great+Vibes&family=Pangolin&family=Play:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 	<body bgcolor="#ffffe6">
