--- a/03.html
+++ b/03.html
@@ -3,9 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Квіти</title>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Advent+Pro:ital,wght@0,100..900;1,100..900&family=Comfortaa:wght@300..700&family=Great+Vibes&family=Neucha&family=Pangolin&family=Play:wght@400;700&display=swap" rel="stylesheet">
+	
 </head>
 <body>
 	<body bgcolor="#ffffe6">
@@ -20,7 +18,7 @@
     	      <li><a href="02.html">Друга сторінка</a></li>
     	      <li><a href="03.html">Третя сторінка</a></li></ul>
         </td></tr></table>
-<h1>Третя сторінка</h1>
+<h1 class="bad-script-regular">Третя сторінка</h1>
 <h2 class="zagl">Символізм квітів</h2>
 <p class="text">Багато квітів мають важливе символічне значення у культурі різних народів. Присвоєння значень для квітів відоме як «мова квітів». Деякі з найпоширеніших прикладів:</p>
 <ul class="perek"><li>Червоні троянди — символ любові, краси та пристрасті</li>
