--- a/02.html
+++ b/02.html
@@ -3,10 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Квіти</title>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Advent+Pro:ital,wght@0,100..900;1,100..900&family=Comfortaa:wght@300..700&family=Great+Vibes&family=Neucha&family=Pangolin&family=Play:wght@400;700&display=swap" rel="stylesheet">
-</head>
+	
 <body>
 	<body bgcolor="#ffffe6">
 <link rel="stylesheet" href="style.css">
@@ -20,7 +17,7 @@
     	      <li><a href="02.html">Друга сторінка</a></li>
     	      <li><a href="03.html">Третя сторінка</a></li></ul>
         </td></tr></table>
-<h1>Друга сторінка</h1>
+<h1 class="bad-script-regular">Друга сторінка</h1>
 <h2 class="zagl">Види квітів</h2>
 <p class="text">З огляду на різну будову та екологію, квіти можна поділяти за різними критеріями. До критеріїв, які використовуються найчастіше можна віднести колір оцвітини, наявність або відсутність запаху, стійкість квітки. У науці в основному використовуються наступні критерії:
 <h3>Поділ з огляду на стать;</h3>
